# raytracer

./: Cargo.toml  README.md
.cargo/: config.toml
2d/: .gitignore  Cargo.toml  README.md
2d/src/: aabb.rs  distributed.rs  img.rs  job.rs  lib.rs  librt2d.rs  spectrum.rs  worlds.rs
3d/.cargo/: config.toml
3d/src/: rt.rs
src/: bogus_main.rs  img.rs  lib.rs  librt2d.rs  rt.rs
