[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
glam = { version = "0.30", features = ["rand", "serde"] }
rand = "0.9.2"
rand_distr = "0.5.1"
noise-functions = "0.8.1"
rayon = "1.11.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
