[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25", default-features = false, features = [
	"png",
	"serde",
] }
bytemuck = { version = "1.24.0", features = ["derive"] }
colorgrad = { version = "0.8.0", features = ["preset"] }
eframe = "0.34"
egui = "0.34"
egui_extras = { version = "0.34", features = ["all_loaders"] }
egui_plot = "0.35"
enum2egui = "0.34"
enum2str = { version = "0.1.18", features = ["try_from_string"] }
glam = { version = "0.33", features = ["rand", "serde"] }
itertools = "0.15"
noise-functions = "0.8.1"
palette = "0.7.6"
rand = "0.10"
rand_chacha = "0.10"
rand_distr = "0.6"
rayon = "1.11.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
